--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10003,3 +10003,11 @@ h3 {
     border-color: #dee2e6;
   }
 }
+body {
+  font-size: 14px;
+  font-weight: normal;
+}
+
+nav.navbar.navbar-expand-lg {
+  margin-bottom: 20px;
+}
